# Bastion

./: .gitignore  Cargo.toml  OPEN_PROBLEMS.md  README.md  SECURITY.md
.github/workflows/: CI.yml
benches/: public_api.rs
docs/: category1_security_analysis.md  category3_protocol_design.md
examples/: public_api_demo.rs  write_results.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_arithmetic.rs  fuzz_constant_time.rs  fuzz_encaps_sign_api.rs  fuzz_encrypt_api.rs  fuzz_hash_compare.rs  fuzz_integration.rs  fuzz_mlsigcrypt_api.rs  fuzz_mlsigcrypt_v1_api.rs  fuzz_onion_api.rs  fuzz_onion_decrypt.rs  fuzz_pqc_key_exchange.rs  fuzz_signatures.rs
research/: Assumption.md  AssumptionA1.md  AssumptionA2.md  AssumptionA3.md  CoreC1.md  CoreC2.md  CoreC3.md  CoreC4.md  CoreC5.md
src/: audit.rs  constant_time.rs  error.rs  lib.rs  os_random.rs  pqc.rs  zeroize.rs
src/algos/: README.md  mod.rs  sha512.rs
src/algos/aes256gcm/: mod.rs
src/algos/aes256gcm/aes/: cipher.rs  key_schedule.rs  mod.rs
src/algos/aes256gcm/arch/: README.md  soft.rs  x86.rs
src/algos/aes256gcm/gcm/: README.md  ctr.rs  mod.rs
src/algos/mldsa87/: README.md  field.rs  keygen.rs  matrix.rs  mod.rs  ntt.rs  packing.rs  params.rs  poly.rs  sampling.rs  sign.rs  vec.rs  verify.rs
src/algos/mlkem1024/: README.md  field.rs  hash.rs  keccak.rs  kem.rs  matrix.rs  ntt.rs  params.rs  poly.rs  sampling.rs  serialize.rs  vec.rs
src/mlsigcrypt/: README.md  kat.rs  keys.rs  mod.rs  params.rs  signcrypt.rs
src/mlsigcrypt/specs/: README.md  algebraic.rs  hkdf.rs  keccak.rs  mod.rs  sha3_512.rs  sha512.rs
src/mlsigcrypt/specs/aes256gcm/: README.md  mod.rs
src/mlsigcrypt/specs/aes256gcm/aes/: README.md  cipher.rs  key_schedule.rs
src/mlsigcrypt/specs/aes256gcm/arch/: mod.rs  soft.rs  x86.rs
src/mlsigcrypt/specs/aes256gcm/gcm/: ctr.rs  ghash.rs  mod.rs
src/mlsigcrypt/specs/ml/: README.md  acvp.rs  field.rs  keygen.rs  matrix.rs  mod.rs  ntt.rs  packing.rs  poly.rs  sampling.rs  sign.rs  vec.rs  verify.rs
src/mlsigcrypt/specs/ml/testdata/: mldsa87_acvp_keygen_tc51.pk.hex  mldsa87_acvp_keygen_tc51.sk.hex
src/mlsigcrypt/specs/mldsa87/: field.rs  keygen.rs  matrix.rs  mod.rs  ntt.rs  packing.rs  params.rs  poly.rs  sampling.rs  sign.rs  vec.rs  verify.rs
src/mlsigcrypt/specs/mlkem1024/: field.rs  hash.rs  keccak.rs  kem.rs  matrix.rs  mod.rs  ntt.rs  params.rs  poly.rs  sampling.rs  serialize.rs  vec.rs
tests/: constant_time_tests.rs  integration_tests.rs  property_tests.rs
