[package]
name = "crypto_bastion"
version = "0.4.0"
edition = "2024"
authors = ["Guilherme F. G. Santos <strukturaenterprise@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Hardened post-quantum cryptographic primitives with zero-trust architecture"
repository = "https://github.com/Guivernoir/Bastion"
documentation = "https://docs.rs/crypto_bastion"
readme = "README.md"
keywords = [
    "cryptography",
    "post-quantum",
    "zero-trust",
    "onion-routing",
    "security",
]
categories = ["cryptography", "network-programming"]
rust-version = "1.92"
exclude = [
    "target/*",
    "fuzz/target/*",
    "fuzz/artifacts/*",
    "fuzz/corpus/*",
    "criterion/*",
    "results.txt",
]

[lib]
name = "crypto_bastion"
path = "src/lib.rs"

[features]
default = []

[dependencies]

[dev-dependencies]
# Property-based testing
proptest = "1.4"

# Benchmarking with HTML reports
criterion = { version = "0.5", features = ["html_reports"] }

# Hex encoding for test assertions
hex = "0.4"

[profile.release]
# Maximum optimization for cryptographic operations
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[profile.dev]
# Fast compilation but maintain overflow checks
opt-level = 1
overflow-checks = true

[profile.test]
# Optimize tests but keep debug info
opt-level = 2
debug = true
overflow-checks = true

[profile.bench]
# Benchmarking profile with debug symbols for profiling
opt-level = 3
lto = "thin"
debug = true
overflow-checks = true

[[bench]]
name = "public_api"
harness = false

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

# Target-specific optimizations for x86_64
[target.'cfg(target_arch = "x86_64")'.dependencies]
# No additional dependencies needed - using std::arch intrinsics

# Deny unsafe dependencies
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
# Security-critical lints
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
mem_forget = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"

# Performance lints
inefficient_to_string = "warn"
large_enum_variant = "warn"
large_stack_arrays = "warn"
