[package]
name = "crypto_bastion-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.crypto_bastion]
path = ".."

[[bin]]
name = "fuzz_hash_compare"
path = "fuzz_targets/fuzz_hash_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encrypt_api"
path = "fuzz_targets/fuzz_encrypt_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_encaps_sign_api"
path = "fuzz_targets/fuzz_encaps_sign_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_onion_api"
path = "fuzz_targets/fuzz_onion_api.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mlsigcrypt_v1_api"
path = "fuzz_targets/fuzz_mlsigcrypt_v1_api.rs"
test = false
doc = false
bench = false
