[package]
name = "crypto_bastion-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.crypto_bastion]
path = ".."

[[bin]]
name = "fuzz_mlsigcrypt_api"
path = "fuzz_targets/fuzz_mlsigcrypt_api.rs"
test = false
doc = false
bench = false
